<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.6</version>
        <relativePath/>
    </parent>
    <groupId>com.example</groupId>
    <artifactId>virtual-clothing-store</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>virtual-clothing-store</name>
    <description>Virtual Clothing Store REST API</description>
    <packaging>pom</packaging>

    <modules>
        <module>discovery-server</module>
        <module>config-server</module>
        <module>api-gateway</module>
        <module>catalog-service</module>
        <module>order-service</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <spring-cloud.version>2023.0.5</spring-cloud.version>
        <!-- bump Spring Framework separately to satisfy Gateway's headerSet dependency -->
        <spring-framework.version>6.1.15</spring-framework.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>